tests/cases/standard-library/ok/prelude/std-lazy-unused.ari
// Implicit std stays visible for type checking, but unused source std
// functions should not be lowered into the emitted LLVM module.
fn main() -> i64 {
  return 0;
}
