tests/cases/standard-library/errors/ari-builtin-missing-link.ari
extern "ari" fn bad() -> i64;

fn main() -> i64 {
  return 0;
}
